camila-orchestrator/int/k8s/aws/cloudformation/API/camila-product-api.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: camila-product-api-ns
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api
  namespace: camila-product-api-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camila-product-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 0
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: camila-product-api
    spec:
      containers:
        - image: "546053716955.dkr.ecr.eu-west-1.amazonaws.com/camila-product-api:1.0.0"
          name: camila-product-api
          resources:
            limits:
              cpu: "2"
              memory: 1024Mi
              ephemeral-storage: "1Gi"
            requests:
              cpu: "1"
              memory: 1024Mi
              ephemeral-storage: "1Gi"
          imagePullPolicy: IfNotPresent # change to Always if you need to update the image
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - name: api-port
              containerPort: 8080
              protocol: TCP
            - name: rsocket-port
              containerPort: 7000
              protocol: TCP
            - name: grpc-port
              containerPort: 6565
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          startupProbe:
            httpGet:
              path: /product-int/api/actuator/health/ping
              port: api-port
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /product-int/api/actuator/health/readiness
              port: api-port
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /product-int/api/actuator/health/liveness
              port: api-port
            initialDelaySeconds: 10
            periodSeconds: 30
      automountServiceAccountToken: true

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api-nodeport-svc
  namespace: camila-product-api-ns
spec:
  ports:
    - name: rsocket-port
      port: 7000
      protocol: TCP
      targetPort: 7000
      nodePort: 30070
    - name: api-port
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30080
    - name: grpc-port
      port: 6565
      protocol: TCP
      targetPort: 6565
      nodePort: 30065
  selector:
    app: camila-product-api
  type: NodePort

---
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.8/
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.8/guide/ingress/annotations/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camila-product-api-http-ingress
  namespace: camila-product-api-ns
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "<certificate-arn>"
    alb.ingress.kubernetes.io/subnets: camila-eks-cluster-public-subnet1,camila-eks-cluster-public-subnet2
    alb.ingress.kubernetes.io/load-balancer-name: camila-eks-cluster-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: ENTORN=INT
    alb.ingress.kubernetes.io/ip-address-type: ipv4

    alb.ingress.kubernetes.io/group.name: camila-product-api
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '30080'
    alb.ingress.kubernetes.io/healthcheck-path: '/product-int/api/actuator/health/ping'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /product-int/api/rsocket
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 7000
          - pathType: Prefix
            path: /product-int/api/
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camila-product-api-grpc-ingress
  namespace: camila-product-api-ns
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "<certificate-arn>"
    alb.ingress.kubernetes.io/subnets: camila-eks-cluster-public-subnet1,camila-eks-cluster-public-subnet2
    alb.ingress.kubernetes.io/load-balancer-name: camila-eks-cluster-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: ENTORN=INT
    alb.ingress.kubernetes.io/ip-address-type: ipv4

    alb.ingress.kubernetes.io/group.name: camila-product-api
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '30080'
    alb.ingress.kubernetes.io/healthcheck-path: '/product-int/api/actuator/health/ping'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '0'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /product.ProductService
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 6565
